# PP

./: .clang-format  .gitignore  CMakeLists.txt
lw1/ExtractArchive/: CMakeLists.txt  Unpacker.cpp  Unpacker.h  main.cpp
lw1/MakeArchive/: CMakeLists.txt  GzipFileManager.cpp  GzipFileManager.h  Packer.cpp  Packer.h  benchmark.sh  main.cpp
lw2/Gauss/: CMakeLists.txt  GaussBlur.cpp  GaussBlur.h  main.cpp
lw2/Life/: CMakeLists.txt  main.cpp
lw2/Life/LifeGame/: LifeGame.cpp  LifeGame.h  LifeGameIO.h
lw2/Life/examples/: glider10.txt  glider5.txt  gosper_gun.txt
lw3/Bank/: Bank.cpp  Bank.h  CMakeLists.txt  SpringfieldLife.cpp  SpringfieldLife.h  main.cpp
lw3/Bank/test/: TestBank.cpp
lw3/Warehouse/: CMakeLists.txt  Warehouse.cpp  Warehouse.h  main.cpp
lw4/MusicPlayer/: CMakeLists.txt  Score.h  Synthesizer.cpp  Synthesizer.h  main.cpp
lw4/MusicPlayer/Audio/: AudioEngine.h
lw4/MusicPlayer/input/: deep  kuz  kuz_src  multi  multi_single  wnd
lw5/TV/: CMakeLists.txt
lw6/Atomics/: CMakeLists.txt  Histogram.cpp  Histogram.h  Image.cpp  Image.h  RowsProcessor.h  main.cpp
lw6/StopToken/: CMakeLists.txt  StopSource.h  main.cpp
lw6/TicketOffice/: CMakeLists.txt  TicketOffice.cpp  TicketOffice.h  TicketOfficeWithLock.cpp  TicketOfficeWithLock.h
lw6/TicketOffice/test/: BenchmarkTicketOffice.cpp  TestTicketOffice.cpp  TestTicketOfficeWithLock.cpp
lw7/AtomicMax/: AtomicMax.h  AtomicMaxWithLock.h  CMakeLists.txt
lw7/AtomicMax/test/: AtomicMaxBenchmark.cpp  AtomicMaxTest.cpp
lw7/ThreadPool_LF/: CMakeLists.txt  LBThreadPool.cpp  LBThreadPool.h  LFThreadPool.cpp  LFThreadPool.h  main.cpp
lw7/ThreadPool_LF/test/: ThreadPoolTest.cpp
lw8/AsyncFile/: AsyncFile.h  CMakeLists.txt  Dispatcher.h  Task.h  main.cpp
lw8/BookGenerator/: CMakeLists.txt  main.cpp
lw8/MyAwaiter/: CMakeLists.txt  main.cpp
lw8/MyTask/: CMakeLists.txt  MyTask.h  main.cpp
lw9/BitonicSort/: BitonicSorter.h  CMakeLists.txt  main.cpp
